--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<a href="https://github.com/atique38/CV/cv.pdf" target="_blank">PDF.</a>
+
+<!DOCTYPE html> 
+<html> 
+  <head> 
+      <title>CV</title>
+  </head> 
+  <body> 
+     <a href="https://github.com/atique38/CV/cv.pdf" target="_blank">PDF.</a>
+  </body> 
+</html> 
+
