--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>CV</title>
   </head> 
   <body> 
-     <a href="https://github.io/atique38/CV/cv.pdf" target="_blank">PDF.</a>
+     <a href="https://atique38.github.io/CV/cv.pdf" target="_blank">PDF.</a>
   </body> 
 </html> 
 
